[project]
name = "how-ai-mk-econ-great-again"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cloudflare>=4.3.1",
    "dashscope>=1.24.4",
    "faiss-cpu>=1.12.0",
    "httpx>=0.28.1",
    "jupyter>=1.1.1",
    "langchain>=0.3.27",
    "langchain-chroma>=0.2.6",
    "langchain-community>=0.3.29",
    "langchain-deepseek>=0.1.4",
    "langchain-mcp-adapters>=0.1.9",
    "langchain-mongodb>=0.7.0",
    "langchain-ollama>=0.3.8",
    "langchain-openai>=0.3.33",
    "langchain-openrouter>=0.0.1",
    "langchain-siliconflow>=0.1.3",
    "langchain-text-splitters>=0.3.11",
    "langextract>=1.0.9",
    "langgraph>=0.6.7",
    "markdown>=3.9",
    "matplotlib>=3.10.6",
    "mcp>=1.14.0",
    "notebook>=7.4.5",
    "numexpr>=2.12.1",
    "openai>=1.106.1",
    "openai-agents>=0.2.11",
    "pypdf>=6.0.0",
    "pypdf2>=3.0.1",
    "python-dotenv>=1.1.1",
    "stata-mcp>=1.6.3",
    "streamlit>=1.49.1",
    "unstructured>=0.18.14",
    "uv>=0.8.17",
]
